<resources>
    <string name="app_name">BloodWorkEasy</string>
    <string name="magnesium">Magnesium</string>
    <string name="calcium">Calcium</string>
    <string name="blood_work_input">Blood Work Input</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="d5_hydroxy">D5, hydroxy</string>
    <string name="chloride">Chloride:</string>
    <string name="iron">Iron</string>
    <string name="sodium">Sodium:</string>
    <string name="zinc">Zinc</string>
    <string name="potassium">Potassium:</string>
    <string name="vitamin_b12">Vitamin B12</string>
    <string name="submit">Submit</string>
    <string name="vitamin_a">Vitamin A</string>
    <string name="your_results">Your Results</string>
    <string name="name">Name</string>
    <string name="untitled">Name</string>
    <string name="untitled2">Name</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="textview4">TextView</string>
    <string name="textview5">TextView</string>
    <string name="textview6">TextView</string>
    <string name="textview7">TextView</string>
    <string name="textview8">TextView</string>
    <string name="textview9">TextView</string>
    <string name="textview10">TextView</string>
    <string name="textview11">TextView</string>
    <string name="textview12">TextView</string>
    <string name="textview13">TextView</string>
    <string name="name2">Name</string>
    <string name="name3">Name</string>
    <string name="name4">Name</string>
    <string name="name5">Name</string>
    <string name="name6">Testosterone</string>
    <string name="Cholesterol">Cholesterol</string>
    <string name="name7">Name</string>
    <string name="name8">Name</string>
    <string name="name9">Name</string>
    <string name="name10">Name</string>
    <string name="name11">Name</string>
</resources>